chore: Extract CSV parsing logic and optimize site import flow
- Introduce `CsvSiteParser`
- Simplify `SiteUpload` model
- Add `ProcessSiteUploadJob` and `ProcessSingleSiteJob` for parallelized site processing
- Fix audit callback to use `after_create` instead of `after_create_commit`

Signed-off-by: Manon Budin <manon.budin@beta.gouv.fr>

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -329,6 +329,7 @@ fr:
       new_audit: Site existant, nouvel audit programmé
     upload:
       title: Importer des sites
+      started: Import démarré
       uploaded:
         zero: Aucun site ajouté
         one: Un site ajouté
