--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -159,6 +159,28 @@ fr:
         compliance_rate: Taux de conformité
         standard: Référentiel
         auditor: Audit réalisé par
+      checks/analyze_schema:
+        type: Schéma pluriannuel d'accessibilité
+        table_header: Schéma
+        years: Années de validité du schéma
+        year_not_found: non détectées
+        link_text: Intitulé du lien
+        link_url: Adresse du lien
+        link_not_found: Lien non trouvé
+        all_passed: Lien trouvé et valide
+        invalid_years: Années invalides
+      checks/analyze_plan:
+        type: Plan d'action
+        table_header: Plan d'action
+        years: Année(s) du plan
+        year_not_found: non détectée
+        link_text: Intitulé du lien
+        link_url: Adresse du lien
+        link_not_found: Lien non trouvé
+        all_passed: Lien trouvé et valide
+        invalid_year: Année(s) invalide(s)
+        page_heading: Titre de page
+        plan_in_page_heading: Plan trouvé dans un titre de page
       checks/find_accessibility_page:
         type: Déclaration d'accessibilité
         table_header: Déclaration
