ui: Improve display and message for link_misplaced and link_unreachable

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -169,9 +169,9 @@ fr:
         year_not_found: non détectées
         link_text: Intitulé du lien
         link_url: Adresse du lien
-        link_misplaced: Le lien est trouvé, mais il devrait se trouver avant le titre "État de conformité"
+        link_misplaced: "Note : le lien est trouvé, mais il devrait se trouver avant le titre \"État de conformité\"."
         link_not_found: Lien non trouvé
-        link_unreachable: Le lien pointe vers une page ou un fichier introuvable
+        link_unreachable: Attention, le lien pointe vers une page ou un fichier introuvable.
         all_passed: Lien trouvé et valide
         invalid_years: Années invalides
         page_heading: Titre de page
@@ -184,9 +184,9 @@ fr:
         year_not_found: non détectée
         link_text: Intitulé du lien
         link_url: Adresse du lien
-        link_misplaced: Le lien est trouvé, mais il devrait se trouver avant le titre "État de conformité"
+        link_misplaced: "Note : le lien est trouvé, mais il devrait se trouver avant le titre \"État de conformité\"."
         link_not_found: Lien non trouvé
-        link_unreachable: Le lien pointe vers une page ou un fichier introuvable
+        link_unreachable: Attention, le lien pointe vers une page ou un fichier introuvable.
         all_passed: Lien trouvé et valide
         invalid_year: Année(s) invalide(s)
         page_heading: Titre de page
