--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -151,8 +151,8 @@ fr:
         incorrect_order: ordre incorrect
         incorrect_level: niveau de titre incorrect
       checks/analyze_accessibility_page:
-        type: Informations sur l'audit
-        table_header: Audit
+        type: Analyse de la déclaration
+        table_header: Taux de conformité
         found_all: Déclaration complète
         missing_data: Déclaration incomplète
         unknown: Non détecté
@@ -191,7 +191,7 @@ fr:
         plan_in_main_text: Plan trouvé dans le texte principal
         nothing_found: Plan non trouvé
       checks/find_accessibility_page:
-        type: Déclaration d'accessibilité
+        type: Présence d'une déclaration d'accessibilité
         table_header: Déclaration
         view_page: "Voir la déclaration"
         link_to_page: "Déclaration d'accessibilité"
