feat: Rename `checked_at` to `completed_at` across the application
- Update the `audits` table to rename the `checked_at` column to `completed_at`.
- Refactor models, migrations, controllers, views, queries, factories, specs, and I18n keys to reflect the change.

Signed-off-by: Manon Budin <manon.budin@beta.gouv.fr>

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -29,7 +29,7 @@ fr:
         one: Équipe
         other: Équipes
   audit:
-    checked_at: Executé le
+    completed_at: Executé le
     count:
       one: Une vérification
       other: "%{count} vérifications"
@@ -51,7 +51,7 @@ fr:
       notice: Vérification créée
   check:
     attempts: Tentatives
-    checked_at: Vérification effectuée le
+    completed_at: Vérification effectuée le
     count:
       one: Un contrôle
       other: "%{count} contrôles"
