feat: Add configurable pagination limits
- Update `pagy_limit` method to enforce limits and prevent invalid values.
- Apply new limits to `tags#index` and `tags#show` actions.

Signed-off-by: Manon Budin <manon.budin@beta.gouv.fr>

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -375,9 +375,7 @@ fr:
       new: Nouvelle étiquette
     index:
       caption: Toutes les étiquettes
-      empty:
-        one: Aucune étiquette
-        other: Aucune étiquette
+      empty: Aucune étiquette
       name: Libellé
       see_sites: "Sites avec l'étiquette %{tag} (%{count})"
       sites: Sites
